--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     ajudou a trabalhar meu lado empático, minha comunicação e autoconhecimento. E um de
                                     letras, gosto muito de escrever e por minhas ideias no papel.<br>
                                     No começo de 2021, minha mãe me indicou um curso de
-                                    <span id="pontoinhos">...</span><span id="leiaMais"> introdução à programação em
+                                    <span id="pontinhos">...</span><span id="leiaMais"> introdução à programação em
                                         Java, foi assim que eu me apaixonei pela área e decidi me dedicar 100% à
                                         programação.<br>
                                         Além disso, comecei um curso em Javascript, conheço HTML
